--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*|||||||||||||||||||***************||||||||||||||||||||*/
+/*|||||||||||||||||||* Botones-Mando *||||||||||||||||||*/
 .button-up{
     width: 60px;
     height: 60px;
@@ -61,3 +63,5 @@
     bottom: 50px;
     left: 165px;
 }
+/*|||||||||||||||||||* Botones-Mando *||||||||||||||||||*/
+/*|||||||||||||||||||***************||||||||||||||||||||*/
